Fix spacing in textarea fields

--- a/public/styles/typography.styl
+++ b/public/styles/typography.styl
@@ -121,6 +121,10 @@ form
 			display inline
 			width auto
 
+	textarea
+		padding .5rem
+		line-height 1.5rem
+
 	button, input[type="submit"]
 		button()
 		margin-top 2rem
